--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,70 +2,267 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/header_title"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="20sp"
+        android:background="@drawable/half_rectangle"
+        android:orientation="vertical"
+        android:paddingHorizontal="15sp"
+        android:paddingVertical="25sp"
         app:layout_constraintBottom_toTopOf="@+id/infoCards"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/headerTextContent"
+        <LinearLayout
+            android:id="@+id/header_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/poppins_semibold"/>
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/infoCards"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/headerTextContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Hola ! User"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:cardCornerRadius="7sp"
+            app:cardElevation="8sp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="8sp"
+                    android:paddingVertical="10sp">
+
+                    <ImageView
+                        android:layout_width="50sp"
+                        android:layout_height="50sp"
+                        android:src="@drawable/user" />
+
+                    <TextView
+                        android:id="@+id/userInfoText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5sp"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="User"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="150sp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:textSize="11sp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="Balance This Month"
+                        android:textAlignment="center"
+                        android:textColor="@color/secondary1" />
+
+                    <TextView
+                        android:id="@+id/balanceThisMonth"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:gravity="center"
+                        android:text="Rp.300000"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="160sp"
+                        android:textSize="11sp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="To Spend This Month"
+                        android:textAlignment="center"
+                        android:textColor="@color/secondary1" />
+
+                    <TextView
+                        android:id="@+id/toSpendSection"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:gravity="center"
+                        android:text="+ Rp.300000"
+                        android:textAlignment="center"
+                        android:textColor="@color/greenMoney"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/infoCards"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/header_title"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/header">
 
         <com.example.livingcosttracker.ui.home.Custom_Card_Component
             android:id="@+id/savingCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="4dp"
+            app:cardContent="Rp. 1.000.000"
+            app:cardContentTextSize="11sp"
+            app:cardIcon="@drawable/wallet"
+            app:cardTitle="Target Saving"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:cardTitle="% Saving"
-            app:cardContent="20%"
-            app:cardIcon="@drawable/wallet"
-            app:cardContentTextSize = "20sp"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
         <com.example.livingcosttracker.ui.home.Custom_Card_Component
             android:id="@+id/expenseCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/savingCard"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:cardTitle="Expense"
             app:cardContent="Rp. 2.000.000"
+            app:cardContentTextSize="11sp"
             app:cardIcon="@drawable/group"
-            app:cardContentTextSize = "13sp"/>
-
-
-
-
-
+            app:cardTitle="Expense This Month"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/savingCard"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cashflowCards"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@color/white"
+        android:padding="10sp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/infoCards">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/headerCashflowCardContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/textSectionCardCashflow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Recent Cashflow"
+                    android:textAlignment="center"
+                    android:textColor="@color/charcoal"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:layout_width="50sp"
+                    android:layout_height="30sp"
+                    android:layout_gravity="end|center"
+                    android:translationX="-5sp"
+                    android:translationY="4sp"
+                    android:src="@drawable/arrow_right"
+                    android:elevation="7dp"/>
+            </FrameLayout>
+
+
+
+            <LinearLayout
+                android:id="@+id/cashflowCardContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="5sp">
+
+                <TextView
+                    android:id="@+id/infoCardText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="No Cashflow Yet"
+                    android:textColor="@color/black"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textStyle="bold"
+                    android:layout_marginTop="20sp"/>
+
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="409dp"
+        android:layout_height="120dp"
+        android:paddingHorizontal="15dp"
+        android:paddingBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="20sp"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <include
+            layout="@layout/widget_addcashflow"
+            android:id="@+id/addCashflowButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
