--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -38,9 +38,10 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="15sp">
                 <TextView
-                    android:layout_width="120sp"
+                    android:layout_width="150sp"
                     android:layout_height="match_parent"
                     android:text="Start Date"
+                    android:textColor="@color/black"
                     android:fontFamily="@font/poppins_semibold"
                     android:textStyle="bold"
                     android:textSize="18sp"
@@ -62,9 +63,10 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="15sp">
                 <TextView
-                    android:layout_width="120sp"
+                    android:layout_width="150sp"
                     android:layout_height="match_parent"
                     android:text="End Date"
+                    android:textColor="@color/black"
                     android:fontFamily="@font/poppins_semibold"
                     android:textStyle="bold"
                     android:textSize="18sp"
@@ -86,9 +88,10 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="15sp">
                 <TextView
-                    android:layout_width="120sp"
+                    android:layout_width="150sp"
                     android:layout_height="match_parent"
                     android:text="Categories"
+                    android:textColor="@color/black"
                     android:fontFamily="@font/poppins_semibold"
                     android:textStyle="bold"
                     android:textSize="18sp"
@@ -96,12 +99,40 @@
                     android:layout_marginEnd="20sp"/>
                 <androidx.cardview.widget.CardView
                     android:layout_height="wrap_content"
-                    android:layout_width="180sp"
+                    android:layout_width="150sp"
                     app:cardBackgroundColor="@color/orange"
                     app:cardCornerRadius="20dp">
 
                     <Spinner
                         android:id="@+id/categories"
+                        android:layout_width="match_parent"
+                        android:layout_height="40sp" />
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15sp">
+                <TextView
+                    android:layout_width="150sp"
+                    android:layout_height="match_parent"
+                    android:text="Item Categories"
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:layout_marginEnd="20sp"/>
+                <androidx.cardview.widget.CardView
+                    android:layout_height="wrap_content"
+                    android:layout_width="150sp"
+                    app:cardBackgroundColor="@color/orange"
+                    app:cardCornerRadius="20dp">
+
+                    <Spinner
+                        android:id="@+id/itemCategories"
                         android:layout_width="match_parent"
                         android:layout_height="40sp" />
                 </androidx.cardview.widget.CardView>
@@ -118,7 +149,7 @@
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/submitAddCashflow"
+        android:id="@+id/submitAddFilter"
         android:layout_width="150sp"
         android:layout_marginTop="10sp"
         android:layout_height="wrap_content"
@@ -132,6 +163,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cashflowListSection"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:minHeight="720sp"
         android:padding="10sp"
