--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,15 +11,21 @@
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_dashboard"-->
-<!--        android:name="com.example.livingcosttracker.ui.dashboard.DashboardFragment"-->
-<!--        android:label="@string/title_dashboard"-->
-<!--        tools:layout="@layout/fragment_dashboard" />-->
-
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.livingcosttracker.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_profile"
+        android:name="com.example.livingcosttracker.ui.profile.ProfileFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
+
+    <!--    <fragment-->
+    <!--        android:id="@+id/navigation_dashboard"-->
+    <!--        android:name="com.example.livingcosttracker.ui.dashboard.DashboardFragment"-->
+    <!--        android:label="@string/title_dashboard"-->
+    <!--        tools:layout="@layout/fragment_dashboard" />-->
+
+    <!--    <fragment-->
+    <!--        android:id="@+id/navigation_notifications"-->
+    <!--           android:name="com.example.livingcosttracker.ui.notifications.NotificationsFragment"-->
+    <!--           android:label="@string/title_notifications"-->
+    <!--          tools:layout="@layout/fragment_notifications" />-->
