--- a/app/src/main/res/layout/widget_addcashflow.xml
+++ b/app/src/main/res/layout/widget_addcashflow.xml
@@ -1,4 +1,4 @@
-<com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/addCashflowButton"
+<com.google.android.material.floatingactionbutton.FloatingActionButton
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/selectedButtonColor"
