--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="dust">#dddad8</color>
     <color name="greenMoney">#228A50</color>
     <color name="redLips">#ed093b</color>
+    <color name="gray">#615f60</color>
+
 
 
 
