--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/input_container"
         android:orientation="vertical"
         android:padding="16dp"
@@ -33,39 +33,49 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:width="300dp"
+                android:background="@null"
                 android:padding="16dp"
+                android:fontFamily="@font/poppins_regular"
                 android:hint="@string/placeholderinputname"
                 android:inputType="textPersonName"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"/>
 
         </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            app:cardBackgroundColor="#FFFFFF"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="8dp"
-            app:cardUseCompatPadding="true">
-
-            <EditText
-                android:id="@+id/income"
+            android:orientation="vertical">
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:width="300dp"
-                android:padding="16dp"
-                android:hint="@string/placeholderincome"
+                android:textStyle="bold"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/gray"
+                android:text="Income"
+                android:textSize="20dp"/>
+            <EditText
+                android:id="@+id/income"
+                android:layout_width="match_parent"
+                android:layout_height="100sp"
+                android:background="@null"
+                android:hint="Rp. 0"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColorHint="@color/white"
                 android:inputType="number"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black" />
-        </androidx.cardview.widget.CardView>
+                android:textColor="@color/white"
+                android:textSize="40sp"
+                android:textStyle="bold">
+            </EditText>
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="% Savings"
             android:textStyle="bold"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="@color/gray"
             android:textSize="20sp"
             android:layout_marginTop="10dp"/>
 
