--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,15 +5,15 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/navigation_home">
 
-    <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.livingcosttracker.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/activity_main" />
+<!--    <fragment-->
+<!--        android:id="@+id/navigation_home"-->
+<!--        android:name="com.example.livingcosttracker.ui.home.HomeFragment"-->
+<!--        android:label="@string/title_home"-->
+<!--        tools:layout="@layout/activity_main" />-->
 
-    <fragment
-        android:id="@+id/navigation_profile"
-        android:name="com.example.livingcosttracker.ui.notifications.NotificationsFragment"
-        android:label="Profile"
-        tools:layout="@layout/activity_add" />
+<!--    <fragment-->
+<!--        android:id="@+id/navigation_profile"-->
+<!--        android:name="com.example.livingcosttracker.ui.profile.ProfileFragment"-->
+<!--        android:label="Profile"-->
+<!--        tools:layout="@layout/fragment_profile" />-->
 </navigation>
